manifest/nexus/nexus_ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    section: tools
    app: nexus
