manifest/nexus/final-nexus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus
    section: tools
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: nexus
    namespace: nexus
    labels:
      app: nexus
      section: tools
spec:
  selector:
    matchLabels:
      app: nexus
      section: tools
  serviceName: nexus
  template:
    metadata:
      labels:
        app: nexus
        section: tools
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.68.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8083
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule" 
  volumeClaimTemplates:
  - metadata:
      name: nexus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "managed-nfs-storage"
      resources:
        requests:
          storage: 8Gi

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-0
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: http-docker-rep
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: nexus
    section: tools
    statefulset.kubernetes.io/pod-name: nexus-0

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  rules:
    - host: nexus.petrenko.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-0
                port:
                  number: 8081
    - host: nexus.petrenko.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-0
                port:
                  number: 8083
